# gpgpu

./: .gitignore  Cargo.toml  Cargo.toml.old  Makefile  TODO.md  config.toml  visual.dot  vk-s-pipeline  vk-s-renderpass
docs/: api  builtin-vars  flex_default.md  font-notes.md  frame-buffer.md  glsl  glsl.md  gpu.md  graphics.md  linear-algebra.md  math.md  vk-buffers  vk-data-layout.md  vk-glossary  vk-graph  vk-index  vk-index-core  vk-index-defer  vk-s-commands  vk-s-core  vk-s-image  vk-s-pipeline  vk-s-queue  vk-s-structs  vk-s-surface  vk-s-swapchain  vk-s-sync  vk-structs.md  vk.md  wgpu-api  wgpu.md  wgsl-grammar.bnf  wgsl.md
docs/vk/: vk-glossary  vk-glsl  vk-index  vk-s-commands
examples/bezier/: main.rs  render.rs  shader.wgsl
examples/cgmath/: main.rs
examples/circle/: main.rs
examples/cls/: main.rs
examples/event_loop/: README.md  main.rs
examples/files/: main.rs
examples/lines/: cube.txt  cube1.txt  line.txt  main.rs  vertices.txt
examples/points/: main.rs  render.rs
examples/render/: main.rs
examples/triangle/: main.rs  render.rs  shader.wgsl  triangle.rs
examples/vk/: info.rs  main.rs  window.rs
examples/wirecube/: line.txt  main.rs  triangle.txt
fonts/: Cargo.toml
fonts/src/: fonts.rs  main.rs
issues/: 2022-03-16-wayland.md
samples/: Cargo.toml
src/: bmp.rs  config.rs  layout.rs  lib.rs  math.rs  plane.rs  render.rs  save.rs  screen.rs  space.rs  style.rs  traits.rs  transforms.rs  ttf.rs  util.rs  vk.rs  w.rs
src/clear_view/: clear_view.rs  mod.rs
src/cpfr/: cpfr.rs  cpfr.wgsl  mod.rs
src/dom/: div.rs  glyph.rs  mod.rs  shape.rs  style.rs  win.rs
src/dom/circle/: circle.rs  circle.wgsl
src/fonts/: bezier.rs  bezier_test.rs  file.rs  glyph.rs  mod.rs  text_layout.rs  unicod.rs
src/models/: mod.rs  triangle.rs  triangle.wgsl
src/niw/: config.rs  event_loop.rs  events_log.rs  mod.rs  single_window.rs
src/pretty/: features.rs  limits.rs  mod.rs  texture_formats.rs
src/primv/: clear.rs  glyph.rs  mod.rs
src/primv/circle/: circle.rs  circle.wgsl
src/primv/load/: load.rs
src/primv/wireframe/: mod.rs  wireframe.rs
src/util/: backend.rs  mod.rs  spinlock.rs
src/vidgets/: clear.rs  mod.rs  save.rs
src/vidgets/circle/: circle.rs  circle.wgsl
src/vidgets/load/: load.rs
src/vidgets/wireframe/: wireframe.rs
src/vk/: mod.rs  pretty.rs  vulkan.rs
src/vulkan/: info.rs  mod.rs
src/wg/: backends.rs  config.rs  features.rs  gpu.rs  mod.rs  pretty.rs  state.rs  wireframe.rs
src/wg/models2/: mod.rs
src/wg/pretty/: texture_formats.rs
src/widg/: clear.rs  mod.rs
src/widg/circle/: circle.rs  circle.wgsl  mod.rs
src/widg/load/: load.rs
src/widg/wireframe/: wireframe.rs
src/win/: log.rs  mod.rs  pretty.rs  wloop.rs
src/wireframe/: mod.rs  shader.wgsl  wireframe.rs
vgi/: Cargo.toml
vgi/src/: deps.rs  div.rs  lib.rs  pp.rs  registry.rs  validity.rs  vulkan.rs
vkinfo/: Cargo.toml
vkinfo/src/: info.rs  main.rs
