[package]
name = "vgi"
version = "0.1.0"
authors = ["prataprc <prataprc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cgi"
path = "src/lib.rs"

[[bin]]
name = "vk"
required-features = ["vk"]

[[bin]]
name = "winit"
required-features = ["winit"]

[dependencies]
winit = "0.26.1"
vulkano = "0.28"
colored = "2.0.0"
# uuid = "0.8"

structopt = { version = "0.3.20", default-features = false, optional = true }
prettytable-rs = { version = "0.8.0", optional = true }
# vulkano-win = { version = "0.24", path = "/home/prataprc/devrs/vulkano/vulkano-win/" }
# vulkano-shaders = { version = "0.24", path = "/home/prataprc/devrs/vulkano/vulkano-shaders/" }

[features]
vk = ["structopt", "prettytable-rs"]
winit = ["structopt", "prettytable-rs"]
