[package]
name = "cgi"
version = "0.1.0"
authors = ["prataprc <prataprc@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cgi"
path = "src/lib.rs"

[[bin]]
name = "vk"
required-features = ["vk"]

[[bin]]
name = "wgpu"
required-features = ["wgpu"]

[[bin]]
name = "fonts"
required-features = ["fonts"]

[dependencies]
winit = "0.26.1"
vulkano = "0.28"
colored = "2.0.0"
prettytable-rs = { version = "0.8.0" }
wgpu = "0.12.0"
wgpu-core = "0.12.0"
wgpu-types = "0.12.0"
env_logger = "0.9" # TODO: used only in examples.
log = "0.4.14"
serde = { version = "1", features = ["derive"] }

# uuid = "0.8"

structopt = { version = "0.3.20", default-features = false, optional = true }
ttf-parser = { version = "0.12.0", optional = true }
# vulkano-win = { version = "0.24", path = "/home/prataprc/devrs/vulkano/vulkano-win/" }
# vulkano-shaders = { version = "0.24", path = "/home/prataprc/devrs/vulkano/vulkano-shaders/" }
# colored = "2.0.0"

[features]
vk = ["structopt"]
fonts = ["structopt", "ttf-parser"]
wgpu = ["structopt"]
