[package]
name = "gpgpu"
version = "0.1.0"
authors = ["prataprc <prataprc@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gpgpu"
path = "src/lib.rs"

[[bin]]
name = "cgm"
required-features = ["cgm"]

[[bin]]
name = "fonts"
required-features = ["fonts"]

[[bin]]
name = "wgpu"
required-features = ["wgpu"]

[dependencies]
winit = "0.26.1"
colored = "2.0.0"
prettytable-rs = { version = "0.8.0" }
wgpu = "0.12.0"
wgpu-core = "0.12.0"
wgpu-types = "0.12.0"
pollster = "0.2.5"
log = "0.4.14"
toml = "0.5.8"
tint = "1.0.1"
serde = { version = "1", features = ["derive"] }
bytemuck = { version = "1.9.1", features = [ "derive", "min_const_generics" ] }
cgmath = "0.18.0"
dirs = "4.0.0"
gif = "0.11.3"
ttf-parser = "0.15.0"
stretch = "0.3.2"
unicode-blocks = "0.1.4"
image = "0.24.1"

env_logger = { version = "0.9", optional = true }
structopt = { version = "0.3.20", default-features = false, optional = true }

[dev-dependencies]
structopt = { version = "0.3.20", default-features = false }
rand = { version = "0.8.4", features = ["std_rng"] }
env_logger = "0.9"

[features]
cgm = ["env_logger", "structopt"]
fonts = ["env_logger", "structopt"]
wgpu = ["env_logger", "structopt"]
