[package]
name = "fonts"
version = "0.1.0"
authors = ["prataprc <prataprc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "*"
prettytable-rs = "0.8.0"
# colored = "2.0.0"
ttf-parser = "0.12.0"
vgi = { version = "0.1.0", path = "../vgi" }
