[package]
name = "samples"
version = "0.1.0"
authors = ["prataprc <prataprc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "*"
winit = "0.25.0"
vgi = { version = "0.1.0", path = "../vgi" }


vulkano = { version = "0.24", path = "/home/prataprc/devrs/vulkano/vulkano/" }
vk-sys = { version = "0.6.2", path = "/home/prataprc/devrs/vulkano/vk-sys/" }
vulkano-win = { version = "0.24", path = "/home/prataprc/devrs/vulkano/vulkano-win/" }
vulkano-shaders = { version = "0.24", path = "/home/prataprc/devrs/vulkano/vulkano-shaders/" }
