[package]
name = "vkinfo"
version = "0.1.0"
authors = ["prataprc <prataprc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "*"
prettytable-rs = "0.8.0"
colored = "2.0.0"
winit = "0.24.0"
vgi = { version = "0.1.0", path = "../vgi" }


vulkano = { version = "0.23", path = "/home/prataprc/devrs/vulkano/vulkano/" }
vk-sys = { version = "0.6.0", path = "/home/prataprc/devrs/vulkano/vk-sys/" }
vulkano-win = { version = "0.22", path = "/home/prataprc/devrs/vulkano/vulkano-win/" }
vulkano-shaders = { version = "0.23", path = "/home/prataprc/devrs/vulkano/vulkano-shaders/" }
